@@ -104,7 +104,9 @@ This method adds a jabber account for connection with the JID C<$jid>
 and the password C<$password>.
 
 C<$domain> and C<$port> are optional and can be undef. C<$domain> overrides the
-domain in the C<$jid>.
+domain in the C<$jid>, and C<$port> would override the default port (service name 'xmpp',
+which will be used for SRV lookup. See also L<AnyEvent::XMPP::Connection> about possible
+values of C<$port>).
 
 C<$connection_args> must either be undef or a hash reference to
 additional arguments for the constructor of the L<AnyEvent::XMPP::IM::Connection>
@@ -121,7 +123,7 @@ sub add_account {
    my $acc = $self->{accounts}->{$bj};
    if ($acc) {
       $acc->{password} = $password;
-      $acc->{domain}     = $domain;
+      $acc->{domain}   = $domain;
       $acc->{port}     = $port;
       $acc->{args}     = $connection_args;
       return;
@@ -132,7 +134,7 @@ sub add_account {
          AnyEvent::XMPP::IM::Account->new (
             jid      => $jid,
             password => $password,
-            domain     => $domain,
+            domain   => $domain,
             port     => $port,
             args     => $connection_args,
          );
